--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines" : { 
+    "node" : ">=14.0.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
