--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eject": "react-scripts eject"
   },
   "engines" : { 
-    "node" : ">=14.0.0"
+    "npm" : ">=7.0.0",
+    "node" : ">=16.0.0"
   },
   "eslintConfig": {
     "extends": [
